@@ -1,6 +1,7 @@
 python-toolbox2 (0.5.0~dev-1) unstable; urgency=low
 
   * New upstream release.
+  * Raise dependency on ffmpeg-static (>= 0.10).
 
  -- Matthieu Bouron <matthieu.bouron@smartjog.com>  Thu, 02 Feb 2012 11:42:30 +0100
 
